--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -22,3 +22,35 @@ These samples are stored in a buffer that is used as data to train the models. I
 
 In our neural network architecture, a graph neural network (GNN) is used to create embeddings from the computation graph, so that the RL models have information of the data dependencies of different nodes in the graph. 
 An actor model with MLP layers and transformer encoder layers were evaluated in this work. Fig. 2 provides information about how the neural network is trained. 
+
+\subsection{Streaming Engine environment}
+
+% describe the Streaming engine environment
+% state, obs, reward etc
+
+\subsection{Model design}
+
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/ppo.png}
+  \caption{Diagram of the RL model. }
+\end{figure}
+
+
+% pre post processing
+% describe the graph neural network 
+% attention module
+
+
+\subsection{Reinforcement learning}
+
+% describe the PPO training procedure
+
+\cite{corr/SchulmanWDRK17}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/ppo.png}
+  \caption{Diagram of the RL framework showing the role of actor and critic networks during RL training. }
+\end{figure}
