--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -6,3 +6,7 @@ This method also presents an advantage compared to baselines random search and e
 The RL approach can also learn from a collection of computation graphs and reuse the learning for mapping previously unseen computation graphs. 
 The other methods on the other hand will have to perform a new search and start from scratch for every new computation graph. 
 PPO with graph embeddings showed that we can obtain more optimized placements by finding higher rewards than other RL approaches. 
+
+\subsection{Experimental Setup}
+
+\subsection{Abrasion study}
