add related work and bib

--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -22,5 +22,8 @@ Using the Proximal Policy Optimization (PPO) method we train a neural network mo
 The trained model was able to create valid mappings for the SE by learning about the problem domain. 
 By using a learning methodology, we are able to reuse what the neural network learned to obtain mappings for computation graphs that were not seen during training.  
 
+This work is motivated to provide improved tools set that lowers SE usability barrier. This also assist other tools or programmers in SE mapping creation by providing placement suggestions or tile 
+configuration labels. The RL mapper performs unsupervised learning and optimization allowing it to search a wide and sparse search space. 
+
 This line of research is inspired by recent work that used RL for chip placement. 
 Our problem requirement of mapping nodes of a computation graph to available compute elements is similar to the problem of placing nodes of a chip netlist on a chip canvas. 
