--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -197,6 +197,31 @@
 
 %Entries
 
+@article{Zhou_compileGNN,
+  author    = {Yanqi Zhou and
+               Sudip Roy and
+               AmirAli Abdolrashidi and
+               Daniel Wong and
+               Peter C. Ma and
+               Qiumin Xu and
+               Hanxiao Liu and
+               Mangpo Phitchaya Phothilimtha and
+               Shen Wang and
+               Anna Goldie and
+               Azalia Mirhoseini and
+               James Laudon},
+  title     = {Transferable Graph Optimizers for {ML} Compilers},
+  journal   = {CoRR},
+  volume    = {abs/2010.12438},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2010.12438},
+  eprinttype = {arXiv},
+  eprint    = {2010.12438},
+  timestamp = {Wed, 28 Oct 2020 08:28:14 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2010-12438.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{mirhoseini2020chip,
   title={Chip placement with deep reinforcement learning},
   author={Mirhoseini, Azalia and Goldie, Anna and Yazgan, Mustafa and Jiang, Joe and Songhori, Ebrahim and Wang, Shen and Lee, Young-Joon and Johnson, Eric and Pathak, Omkar and Bae, Sungmin and others},
@@ -211,7 +236,125 @@
   year={2019}
 }
 
-@article{corr/SchulmanWDRK17,
+@article{addanki2019placeto,
+  title={Placeto: Learning generalizable device placement algorithms for distributed machine learning},
+  author={Addanki, Ravichandra and Venkatakrishnan, Shaileshh Bojja and Gupta, Shreyan and Mao, Hongzi and Alizadeh, Mohammad},
+  journal={arXiv preprint arXiv:1906.08879},
+  year={2019}
+}
+
+@inproceedings{gori2005new,
+  title={A new model for learning in graph domains},
+  author={Gori, Marco and Monfardini, Gabriele and Scarselli, Franco},
+  booktitle={Proceedings. 2005 IEEE international joint conference on neural networks},
+  volume={2},
+  number={2005},
+  pages={729--734},
+  year={2005}
+}
+
+@article{hochreiter1996lstm,
+  title={LSTM can solve hard long time lag problems},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Advances in neural information processing systems},
+  volume={9},
+  year={1996}
+}
+
+@article{Zhichao_ESNAS,
+  author    = {Zhichao Lu and
+               Ian Whalen and
+               Vishnu Boddeti and
+               Yashesh D. Dhebar and
+               Kalyanmoy Deb and
+               Erik D. Goodman and
+               Wolfgang Banzhaf},
+  title     = {{NSGA-NET:} {A} Multi-Objective Genetic Algorithm for Neural Architecture
+               Search},
+  journal   = {CoRR},
+  volume    = {abs/1810.03522},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1810.03522},
+  eprinttype = {arXiv},
+  eprint    = {1810.03522},
+  timestamp = {Tue, 30 Oct 2018 10:49:09 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1810-03522.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Shengyi_mask,
+  author    = {Shengyi Huang and
+               Santiago Onta{\~{n}}{\'{o}}n},
+  title     = {A Closer Look at Invalid Action Masking in Policy Gradient Algorithms},
+  journal   = {CoRR},
+  volume    = {abs/2006.14171},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2006.14171},
+  eprinttype = {arXiv},
+  eprint    = {2006.14171},
+  timestamp = {Wed, 01 Jul 2020 15:21:23 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2006-14171.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ZophL16_NASRL,
+  author    = {Barret Zoph and
+               Quoc V. Le},
+  title     = {Neural Architecture Search with Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1611.01578},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.01578},
+  eprinttype = {arXiv},
+  eprint    = {1611.01578},
+  timestamp = {Mon, 13 Aug 2018 16:46:24 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/ZophL16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{shi2020learned,
+  title={Learned Hardware/Software Co-Design of Neural Accelerators},
+  author={Shi, Zhan and Sakhuja, Chirag and Hashemi, Milad and Swersky, Kevin and Lin, Calvin},
+  journal={arXiv preprint arXiv:2010.02075},
+  year={2020}
+}
+
+@article{kormushev2013reinforcement,
+  title={Reinforcement learning in robotics: Applications and real-world challenges},
+  author={Kormushev, Petar and Calinon, Sylvain and Caldwell, Darwin G},
+  journal={Robotics},
+  volume={2},
+  number={3},
+  pages={122--148},
+  year={2013},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{Mirhoseini_placementRNN,
+  author    = {Azalia Mirhoseini and
+               Hieu Pham and
+               Quoc V. Le and
+               Benoit Steiner and
+               Rasmus Larsen and
+               Yuefeng Zhou and
+               Naveen Kumar and
+               Mohammad Norouzi and
+               Samy Bengio and
+               Jeff Dean},
+  title     = {Device Placement Optimization with Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1706.04972},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1706.04972},
+  eprinttype = {arXiv},
+  eprint    = {1706.04972},
+  timestamp = {Fri, 04 Jan 2019 10:57:57 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/MirhoseiniPLSLZ17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{Schulman_ppo,
   author    = {John Schulman and
                Filip Wolski and
                Prafulla Dhariwal and
